# LoopGenerator

./: .gitignore  Baroquoe Ansamble.txt  SJUP Basoon + Tenor Sax.txt  SJUP Piano Oboe.txt  SJUP Piano+Lydian+Scherzo+Oboe.txt  Selected_Loops_1.json  analyze_bossa.py  baroque_tonejs_master_instruction.md  check_passacaglia.py  generate_test_loops.py  main.py  melodies_generator.py  output.json  patch_passacaglia.py  pyproject.toml  run copy.bat  run.bat  run_silent.vbs  scratch_composers.py  test_api.py  test_bossa.json  test_bossa.py  test_get_styles.py  test_lofi.json  test_neosoul.json  test_offline.js  test_phase34.py  test_phase5.py  test_phase5_edge.py  test_romantic.json  test_romantic.py  test_sort.js  test_videogame.json  theory_engine_demo.json  theory_engine_demo_fixed.json  theory_engine_demo_fixed2.json  theory_engine_demo_v4.json
data/: _loop_meta.json  aggressive_c-minor_arpeggio.json  ascending_arpeggio_loop.json  chaotic_f_major_run.json  cyberpunk_bassline.json  cyberpunk_дерьмо_fm_bassline.json  dancing_fairies.json  dreamy_synth_chords.json  driving_baroque_beat.json  dusted_mood_fm_bass.json  fast_gallop_drums.json  generative_ambient_piano.json  glassy_bell_drops.json  groovy_house_drums.json  hard_kick_pulse.json  interlocking_rhythm.json  intimate_felt_progressions.json  intimate_jazz_progressions.json  lofi_hiphop_beat.json  melodic_dream.json  motoric_pattern.json  neoclassical_arpeggio.json  rainy_day_lofi_shuffle.json  shimmering_a-major_cascade.json  slinky_dusty_beat.json  smooth_g-major_ascent.json  steady_pulse_kick.json  (+1 more)
static/: app.js  (+15 more)
